# en-inflexion

./: .gitattributes  Cargo.toml  LICENSE.txt  precious.toml
.github/workflows/: ci.yml
crate/: Cargo.toml
crate/src/: adjective.rs  indefinite.rs  lib.rs  noun.rs  person.rs  pronoun.rs  term.rs  util.rs  verb.rs
crate/src/ll/: mod.rs  nouns.rs  verbs.rs
generator/: Cargo.toml
generator/src/: main.rs  nouns.rs  nouns.rs.template  util.rs  verbs.rs  verbs.rs.template
source-data/: nouns.lei  verbs.lei
