[package]
name = "en-inflexion"
version = "0.0.1"
edition = "2018"
authors = [ "Dave Rolsky <autarch@urth.org", "Damian Conway <dconway@cpan.org>" ]
description = "Inflect English nouns, verbs, adjectives, and articles"
repository = "https://github.com/houseabsolute/en-inflexion"
license = "Artistic-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "~1"
regex = "~1"
thiserror = "~1"

[features]
debug = []