[package]
name = "generator"
version = "0.1.0"
edition = "2018"
authors = [ "Dave Rolsky <autarch@urth.org", "Damian Conway <dconway@cpan.org>" ]
license = "Artistic-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
clap = { version = "3.0.0-rc", features = ["derive"] }
once_cell = "~1"
regex = "~1"
